# UE5NoahServer

./: .gitignore  CMakeLists.txt  README.md  buildServer.sh  xx.txt
Dependencies/: build_kcp.sh  build_lua.sh  build_mongoc.sh  build_mongocxx.sh  build_vcpkg.sh  include_copy.sh
Dependencies/include/libbson-1.0/bson/: bson-version.h
Dependencies/include/libmongoc-1.0/mongoc/: mongoc-config.h
Dependencies/kcp/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  kcp_test
Dependencies/lua-5.3.6/src/: lua  luac
Dependencies/mongo-c-driver-1.19.0/src/libbson/doc/html/: api.html  bson_append_array.html  bson_append_array_begin.html  bson_append_array_end.html  bson_append_binary.html  bson_append_bool.html  bson_append_code.html  bson_append_code_with_scope.html  bson_append_date_time.html  bson_append_dbpointer.html  bson_append_decimal128.html  bson_append_document.html  bson_append_document_begin.html  bson_append_document_end.html  bson_append_double.html  bson_append_int32.html  bson_append_int64.html  bson_append_iter.html  bson_append_maxkey.html  bson_append_minkey.html  bson_append_now_utc.html  bson_append_null.html  bson_append_oid.html  bson_append_regex.html  bson_append_regex_w_len.html  bson_append_symbol.html  bson_append_time_t.html  bson_append_timestamp.html  bson_append_timeval.html  bson_append_undefined.html  bson_append_utf8.html  bson_append_value.html  bson_array_as_json.html  bson_as_canonical_extended_json.html  bson_as_json.html  bson_as_json_with_opts.html  bson_as_relaxed_extended_json.html  bson_ascii_strtoll.html  bson_check_version.html  bson_compare.html  (+201 more)
Dependencies/mongo-c-driver-1.19.0/src/libbson/doc/man/: bson_append_array.3  (+237 more)
Dependencies/mongo-cxx-driver-r3.6.7/etc/: make_release.py
Dependencies/mongo-cxx-driver-r3.6.7/examples/mongocxx/: pool.cpp
Dependencies/puerts/include/: DataTransfer.h  ObjectCacheNode.h
Dependencies/puerts/src/: DataTransfer.cpp
NFComm/: CMakeLists.txt
NFComm/NFCore/: NFDataList.hpp
NFComm/NFJsScriptPlugin/: CMakeLists.txt  DefaultJSModuleLoader.cpp  JSModuleLoader.h  JsEnv.cpp  JsEnv.h  JsEnvImpl.cpp  JsEnvImpl.h  NFJsEnvModule.h  NFJsPBModule.cpp  NFJsPBModule.h  NFJsScriptModule.cpp  NFJsScriptModule.h  NFJsScriptPlugin.cpp  NFJsScriptPlugin.h  PromiseRejectCallback.hpp  V8InspectorImpl.cpp  V8Utils.h  embedtest.cpp
NFComm/NFKernelPlugin/: NFEventModule.h  NFKernelModule.cpp  NFKernelModule.h  NFScheduleModule.cpp
NFComm/NFLogPlugin/: NFLogModule.h
NFComm/NFLuaScriptPlugin/: NFLuaPBModule.h  NFLuaScriptModule.cpp
NFComm/NFLubanPlugin/: CMakeLists.txt  NFLubanModule.cpp  NFLubanModule.h  NFLubanPlugin.cpp  NFLubanPlugin.h
NFComm/NFLubanPlugin/bright/: CommonMacros.h
NFComm/NFLubanPlugin/bright/serialization/: ByteBuf.cpp
NFComm/NFMessageDefine/: NFDefine.cs  NFDefine.pb.cc  NFDefine.pb.h  NFMsgBase.cs  NFMsgBase.pb.cc  NFMsgBase.pb.h  NFMsgBase.proto  NFMsgPreGame.cs  NFMsgPreGame.pb.cc  NFMsgPreGame.pb.h  NFMsgShare.cs  NFMsgShare.pb.cc  NFMsgShare.pb.h
NFComm/NFMongoDBPlugin/: CMakeLists.txt  NFMongoDBClient.cpp  NFMongoDBClient.h  NFMongoDBModule.cpp  NFMongoDBModule.h  NFMongoDBPlugin.cpp  NFMongoDBPlugin.h  NFMongoDBProtocolDefine.h
NFComm/NFNetPlugin/: CMakeLists.txt  KcpObject.cpp  KcpObject.h  NFIKcp.h  NFINet.h  NFIUdp.h  NFKcp.cpp  NFKcp.h  NFKcpModule.cpp  NFKcpModule.h  NFNet.h  NFNetPlugin.cpp  NFUdp.cpp  NFUdp.h  NFUdpModule.cpp  NFUdpModule.h  dllmain.cpp
NFComm/NFNoSqlPlugin/: NFRedisClientSocket.cpp
NFComm/NFPluginLoader/: NFPluginManager.cpp  NFPluginManager.h  NFPluginServer.cpp
NFComm/NFPluginModule/: NFIClassModule.h  NFIEventModule.h  NFIKcpModule.h  NFILogModule.h  NFIMongoDBModule.h  NFINetModule.h  NFIPluginManager.h  NFIScheduleModule.h  NFIUdpModule.h  NFIWSModule.h  NFPlatform.h
NFComm/NFTsScriptPlugin/: CMakeLists.txt  NFTsScriptModule.cpp  NFTsScriptModule.h  NFTsScriptPlugin.cpp  NFTsScriptPlugin.h  embedtest.cpp
NFExamples/NFServer/: NFServer.h
Test/: TcpServer  TcpServer.cpp  Test  Test.cpp  Test1  Test1.cpp  UdpServer.cpp
Tutorial/Tutorial1/: CMakeLists.txt  HelloWorld1.cpp  HelloWorld1.h  dllmain.cpp
_Out/: Tutorial.sh  runr.sh
_Out/NFDataCfg/Debug/: Plugin.xml
_Out/NFDataCfg/Excel/: Group.xlsx  InitProperty.xlsx  Item.xlsx  NPC.xlsx  Player.xlsx  Scene.xlsx  Server.xlsx  Skill.xlsx
_Out/NFDataCfg/Excel/Comm/: CooldownRecord.xlsx  IObject.xlsx
_Out/NFDataCfg/Excel/Side/: GM.xlsx  Language.xlsx  NoSqlServer.xlsx  Security.xlsx
_Out/NFDataCfg/Ini/Side/: Language.xml
_Out/NFDataCfg/Release/: Plugin.xml  Tutorial.xml
_Out/NFDataCfg/Struct/: Item.xml  NPC.xml  Skill.xml
_Out/NFDataCfg/Struct/Comm/: IObject.xml
_Out/NFDataCfg/TsProj/: package-lock.json  package.json  tsconfig.json
_Out/NFDataCfg/TypeScript/: package-lock.json  package.json
(+1309 files in other folders)
